<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"

    android:layout_height="match_parent"
    android:background="@drawable/homeb"
    tools:context="info.techasylum.lucknowmetro.about">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="7dp"
    android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/menulayout"

            android:padding="18dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="23sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:id="@+id/line"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/menulayout"
            android:background="@color/colorPrimary"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
            android:layout_margin="20dp"
            android:padding="7dp"
        android:background="@drawable/about"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LOST AND FOUND"
          android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:padding="14dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/t1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:autoLink="phone"

        android:text="@string/t2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"

        android:text="@string/t3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"

        android:text="@string/t4"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"

        android:text="@string/t5"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"

        android:text="@string/t6"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"

        android:text="@string/t7"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"

        android:text="@string/t8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="7dp"
        android:background="@drawable/about"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:padding="14dp"
        android:gravity="center"

        android:text="@string/h1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"

        android:text="@string/h2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"

        android:text="@string/h3"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="7dp"
            android:text="@string/h5" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"

        android:text="@string/h4"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
        android:autoLink="phone"

        android:text="@string/h6"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"

        android:text="@string/h7"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:padding="7dp"
        android:background="@drawable/about"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:padding="14dp"
            android:gravity="center"

            android:text="MAP"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/offlinemap"

            android:padding="25dp"
            android:background="@android:color/transparent"
            android:src="@drawable/yellow"/>
     </LinearLayout>
    </LinearLayout>


</ScrollView>
