<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homeb"
    android:orientation="vertical"
    tools:context="info.techasylum.lucknowmetro.FareStats">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/menulayout"
        android:padding="18dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="23sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:id="@+id/line"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/menulayout"
        android:background="@color/colorPrimary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/line"
        android:layout_marginTop="20dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <AutoCompleteTextView
                android:id="@+id/actv1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape"
                android:drawableLeft="@drawable/a"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/Source"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textPersonName"
                android:paddingRight="18dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <AutoCompleteTextView
                android:id="@+id/actv2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape"
                android:drawableLeft="@drawable/b"
                android:drawablePadding="20dp"
                android:ems="10"
                android:layout_marginRight="20dp"

                android:layout_marginLeft="20dp"
                android:hint="@string/Destination"
                android:inputType="textPersonName"
                android:paddingRight="18dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/submit"
                android:text="@string/Click_here"
                android:textColor="@android:color/white"
                android:textSize="18sp" />


        </LinearLayout>


    </ScrollView>
</LinearLayout>